[gd_scene load_steps=25 format=2]

[ext_resource path="res://Player_Elements/Player.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Player/player_s_0.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Player/player_e_0.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Player/player_w_0.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Player/player_n_0.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Player/player_e_2.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Player/player_w_2.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Player/player_s_1.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Player/player_n_1.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Player/player_e_1.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Player/player_n_2.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Player/player_w_1.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Player/player_s_2.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Player/player_w_attack.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Player/player_n_attack.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Player/player_s_attack.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Player/player_e_attack.png" type="Texture" id=17]
[ext_resource path="res://Sounds/397276__whisperbandnumber1__grunt1.wav" type="AudioStream" id=18]
[ext_resource path="res://Sounds/257780__xtrgamr__man-oof.wav" type="AudioStream" id=19]
[ext_resource path="res://Player_Elements/AttackArea.gd" type="Script" id=20]
[ext_resource path="res://Sounds/161098__braqoon__arrow-damage.wav" type="AudioStream" id=21]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 7 ) ],
"loop": true,
"name": "MoveLeft",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 6 ) ],
"loop": true,
"name": "MoveRight",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 13 ) ],
"loop": true,
"name": "MoveDown",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 11 ) ],
"loop": true,
"name": "MoveUp",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "IdleUp",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "IdleRight",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": false,
"name": "AttackLeft",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ) ],
"loop": false,
"name": "AttackRight",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ) ],
"loop": false,
"name": "AttackDown",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "IdleDown",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "IdleLeft",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ) ],
"loop": false,
"name": "AttackUp",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 20.0
height = 13.3333

[sub_resource type="CapsuleShape2D" id=3]
radius = 16.6667
height = 46.6667

[node name="Player" type="KinematicBody2D"]
position = Vector2( 0, -4 )
scale = Vector2( 0.3, 0.3 )
collision_layer = 32769
collision_mask = 3
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "IdleDown"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="IFrames" type="Timer" parent="."]
one_shot = true

[node name="DamagedSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 19 )

[node name="DeathSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 18 )

[node name="ArrowSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 21 )
volume_db = -6.992

[node name="AttackArea" type="Area2D" parent="." groups=["PlayerAttack"]]
rotation = -3.14159
script = ExtResource( 20 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2( 0, 33.3333 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="BombTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[connection signal="timeout" from="IFrames" to="." method="_on_IFrames_timeout"]
[connection signal="body_entered" from="AttackArea" to="AttackArea" method="_on_AttackArea_body_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="timeout" from="BombTimer" to="." method="_on_BombTimer_timeout"]
